fix: let loading state stretch full height

--- a/src/index.css
+++ b/src/index.css
@@ -3,9 +3,6 @@
 @tailwind components;
 @tailwind utilities;
 
-.sandbox-wrapper .sp-loading {
-  max-height: calc(100vh - 16em);
-}
 .sandbox-wrapper .sp-loading:before {
   content: "Loading...";
   position: absolute;
